# AirQualityPrediction

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
air_quality_model/: model_sweden_stockholm_haegernaes.json  model_sweden_stockholm_haegersten.json  model_sweden_stockholm_hammarby.json  model_sweden_stockholm_ljusslingan.json  model_sweden_stockholm_lundstroemsgata.json  model_sweden_stockholm_stockholm_hornsgatan_108_gata.json  model_sweden_stockholm_stockholm_st_eriksgatan_83.json  model_sweden_stockholm_sweden_hägersten_älvsjö_stadsdelsområde_nybohovsbacken_48a.json
backend/: update_sensor_coordinates.py  util.py
backend/data/: hammarby.csv  hägernäs.csv  hägersten.csv  jultomtestegen.csv  liljeholmen.csv  ljusslingan.csv  lundströmsgata.csv  märsta.csv  nacka.csv  nybohovsbacken.csv  rahu-air-quality.csv  sollentuna-sollentunavagen-192.csv  stockholm-hornsgatan-108-gata.csv  stockholm-st-eriksgatan-83.csv  sundbyberg-tulegatan-9.csv
backend/deployment/: daily_feature.ipynb  model_predict.ipynb  run_daily_feature.py  run_inference.py  run_pipeline.py  util.py
backend/models/: lags.yml
backend/notebooks/: .cache.sqlite  1_air_quality_feature_backfill.ipynb  2_air_quality_feature_pipeline.ipynb  3_air_quality_training_pipeline.ipynb  4_air_quality_batch_inference.ipynb  backfill.ipynb  daily_feature.ipynb  model_predict.ipynb  new_feature.ipynb  train_model.ipynb
backend/pipelines/: plot_metrics.py  run_backfill.py  run_daily_feature.py  run_predictions.py  train_model.py
backend/sensors/: sensors.yml
(+76 files in other folders)
